# MailMind

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements-lite.txt  requirements.txt  run.bat  validate.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
app/core/: environment.py  episode.py  graders.py  inbox.py  injection.py  rewards.py
app/db/: __init__.py  firebase_client.py
app/models/: __init__.py  action.py  observation.py  reward.py
app/routes/: baseline_routes.py  env_routes.py  grader_routes.py  health_routes.py  task_routes.py
baseline/: __init__.py  prompts.py  run_baseline.py
data/email_templates/: __init__.py  templates.py
data/fixtures/: task1_classify.json  task2_reply.json  task3_workflow.json
data/personas/: roles.json
scripts/: baseline_inference.py
server/: app.py
static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  pytest_results.txt  test_endpoints.py  test_final_verify.py  test_full_verify.py  test_graders.py  test_mailmind.py
