[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailmind"
version = "1.0.0"
description = "MailMind OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "faker",
    "sentence-transformers",
    "httpx",
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]
